--- a/work/02_GulpTest/index.html
+++ b/work/02_GulpTest/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>02_GulpTest</title>
+  <link rel="stylesheet" href="css/bulit.min.css">
 </head>
 <body>
+  <div id="box1"></div>
+  <div id="box2"></div>
+  <script type="text/javascript" src="js/built.min.js"></script>
 </body>
 </html>
