--- a/work/02_GulpTest/index.html
+++ b/work/02_GulpTest/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="css/bulit.min.css">
 </head>
 <body>
-  <div id="box1"></div>
-  <div id="box2"></div>
+  <div id="box1" class="index1">aaaaa</div>
+  <div id="box2" class="index2">ccccc</div>
   <script type="text/javascript" src="js/built.min.js"></script>
 </body>
 </html>
